<resources>
    <string name="app_name">ArrayAdapterExample</string>
    <string name="reg_form">Registeration Form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="course">Courses Applied for</string>
    <string name="uicomponents">UI Components</string>
    <string name="listview">ListView Example</string>

</resources>
