<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".UIcomponentsExample">

    <TextView
        android:id="@+id/reg_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_form"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_16"
        android:padding="@dimen/padding5"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:layout_below="@id/reg_form"
        android:textColorHint="@color/colccc"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone"
        android:layout_below="@id/name"
        android:textColorHint="@color/colccc"
        android:inputType="phone"
        />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="@dimen/text_16"
        android:padding="@dimen/padding5"
        android:layout_marginTop="@dimen/padding5"
        android:layout_below="@id/phone"/>

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/gender">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:padding="@dimen/padding10"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:padding="@dimen/padding10"
            android:layout_marginLeft="@dimen/padding10"/>
    </RadioGroup>


    <TextView
        android:id="@+id/course_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="@dimen/text_16"
        android:padding="@dimen/padding5"
        android:layout_below="@id/gender_group"/>


    <CheckBox
        android:id="@+id/english_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_txt"
        android:padding="@dimen/padding10"
        android:text="English"/>

    <CheckBox
        android:id="@+id/fluency_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_txt"
        android:padding="@dimen/padding10"
        android:text="Fluency"
        android:layout_toRightOf="@id/english_chk"/>

    <CheckBox
        android:id="@+id/ielts_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/english_chk"
        android:padding="@dimen/padding10"
        android:layout_marginTop="@dimen/padding5"
        android:text="IELTS"/>

    <CheckBox
        android:id="@+id/toefl_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fluency_chk"
        android:padding="@dimen/padding10"
        android:layout_marginTop="@dimen/padding5"
        android:text="TOEFL"
        android:layout_toRightOf="@id/ielts_chk"/>

    <Spinner
        android:id="@+id/age_grup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ielts_chk"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        ></Spinner>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@id/age_grup"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_bg"/>

</RelativeLayout>
